minor enhancements
