# python_server/launcher.py
@@ -5,9 +5,9 @@ import os
 from fastapi import Depends, FastAPI, Request
 from fastapi.middleware.cors import CORSMiddleware
 from injector import Injector
-from python_server.components.triangulation.database.main import init_db
+from python_server.components.triangulation_equipolar.database.main import init_db
 from python_server.routes.segmentation.segmentation_router import segmentation_router 
-from python_server.routes.triangulation.triangulation_router import triangulation_router 
+from python_server.routes.triangulation_equipolar.triangulation_router import triangulation_router 
 from python_server.routes.photo_router.photo_router import photo_router 
 
 from python_server.settings.settings import Settings
